// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SocialMediaGroup /> defaults size when scale does not map to a value 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "12em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={2}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={2}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={2}
    />
  </Row>
</Container>
`;

exports[`<SocialMediaGroup /> renders correctly scale=large 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "24em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={6}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={6}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={6}
    />
  </Row>
</Container>
`;

exports[`<SocialMediaGroup /> renders correctly scale=medium 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "18em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={4}
    />
  </Row>
</Container>
`;

exports[`<SocialMediaGroup /> renders correctly scale=small 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "12em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={2}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={2}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={2}
    />
  </Row>
</Container>
`;

exports[`<SocialMediaGroup /> renders correctly with invalid scale 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "18em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={4}
    />
  </Row>
</Container>
`;

exports[`<SocialMediaGroup /> renders correctly with no scale modifier 1`] = `
<Container
  fluid={true}
  style={
    Object {
      "maxWidth": "18em",
    }
  }
>
  <Row
    className="justify-content-md-center"
    noGutters={false}
  >
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Twitter.svg",
          "name": "Twitter",
        }
      }
      key="Twitter"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/",
          "logo": "/Reddit.svg",
          "name": "Reddit",
        }
      }
      key="Reddit"
      size={4}
    />
    <SocialBrandIcon
      brand={
        Object {
          "href": "/api/rss",
          "logo": "/RSS.svg",
          "name": "RSS",
        }
      }
      key="RSS"
      size={4}
    />
  </Row>
</Container>
`;
